# NTPWEdit_New

./: BUILD.txt  CMakeLists.txt  README.md  configure-mingw.cmd  configure-msvc.cmd  dlgabout.c  dlgabout.h  dlghiber.c  dlghiber.h  dlgpass.c  dlgpass.h  main.c  message.c  message.h  resource.rc  resource64.rc  version.c  version.h
libdlg/: CMakeLists.txt  configure.cmd  ctl_button.c  ctl_button.h  ctl_checkbox.c  ctl_checkbox.h  ctl_edit.c  ctl_edit.h  ctl_groupbox.c  ctl_groupbox.h  ctl_hotkey.c  ctl_hotkey.h  ctl_image.c  ctl_image.h  ctl_label.c  ctl_label.h  ctl_listview.c  ctl_listview.h  ctl_progress.c  ctl_progress.h  ctl_richview.c  ctl_richview.h  dialogs.c  dialogs.h  dlgpack.c  dlgpack.h  unicode.c  unicode.h
libntpw/: CMakeLists.txt  libsam.c  log.c  log.h  ntpw.c  ntpw.h  ntreg.c  ntreg.h  sam.h
res/: ntpwedit.exe.manifest  ntpwedit64.exe.manifest
